# omeinsum-rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  codecov.yml  tarpaulin.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  coverage.yml  docs.yml  release.yml
benches/: network_3reg_150.json  network_large.json  network_medium.json  network_small.json  profile_network.rs
docs/: CUDA_SETUP.md  book.toml
docs/plans/: 2026-01-26-cuda-backend-unified-design.md  2026-01-26-gpu-implementation-design.md  2026-01-26-omeinsum-design.md  2026-01-26-omeinsum-pending-features.md  2026-01-26-showcase-examples-design.md  2026-01-26-unary-einsum-fix.md  2026-01-26-unary-gradient-design.md  2026-01-27-unified-backend-design.md  2026-01-27-unified-backend-impl.md  2026-01-28-testing-plan.md  gpu-test-implementation-plan.md  gpu-test-plan.md
docs/src/: SUMMARY.md  algebras.md  api-reference.md  architecture.md  backpropagation.md  changelog.md  einsum-api.md  examples.md  getting-started.md  installation.md  introduction.md  optimization.md  performance.md  quick-start.md  tensor-api.md
examples/: basic_einsum.rs  bench_binary.jl  bench_binary.rs  test_gemm.rs  test_parallel.rs  test_strided.rs  tropical_network.rs
scripts/: test_features.sh
src/: lib.rs
src/algebra/: mod.rs  semiring.rs  standard.rs  tropical.rs
src/backend/: cpu.rs  mod.rs  traits.rs
src/backend/cpu/: contract.rs  mod.rs
src/backend/cuda/: mod.rs  storage.rs
src/backend/cuda/cutensor/: contract.rs  handle.rs  mod.rs  sys.rs
src/einsum/: backward.rs  builder.rs  engine.rs  mod.rs
src/tensor/: mod.rs  ops.rs  view.rs
tests/: backend_contract.rs  backward.rs  binary_rules.rs  coverage.rs  cuda.rs  einsum_core.rs  integration.rs  omeinsum_compat.rs  optimizer.rs  showcase.rs  tropical.rs  unary_ops.rs
